--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -2879,6 +2879,11 @@ msgctxt "#679"
 msgid "Verbose logging for CEC library"
 msgstr ""
 
+#: xbmc/settings/AdvancedSettings.cpp
+msgctxt "#697"
+msgid "Verbose logging for OMXPLAYER"
+msgstr ""
+
 #empty strings from id 680 to 699
 
 msgctxt "#700"
