filesystem: Make support of browsing into archives optional
The ability to browse, scan and play content in archives can cause problems on low powered/low memory devices.
It's quite common to see reports of a large rar file that causes xbmc to crash with an out-of-memory error when browsing or scanning.
It also can be slow as any archive in the directory is opened and extracted.

Add a settings option to enable this feature and default to disabled on Pi

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -15894,3 +15894,13 @@ msgstr ""
 msgctxt "#37030"
 msgid "Unlimited"
 msgstr ""
+
+#: system/settings/settings.xml
+msgctxt "#37031"
+msgid "Support browsing into archives"
+msgstr ""
+
+#: system/settings/settings.xml
+msgctxt "#37032"
+msgid "Allow viewing and playing files in archives (e.g. zip, rar)"
+msgstr ""
