[cec] Add settings for configuring button repeats

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -16177,3 +16177,18 @@ msgstr ""
 msgctxt "#38015"
 msgid "Extract thumbnails from video files"
 msgstr ""
+
+#: system/peripherals.xml
+msgctxt "#38050"
+msgid "Remote button press delay before repeating (ms)"
+msgstr ""
+
+#: system/peripherals.xml
+msgctxt "#38051"
+msgid "Remote button press repeat rate (ms)"
+msgstr ""
+
+#: system/peripherals.xml
+msgctxt "#38052"
+msgid "Remote button press release time (ms)"
+msgstr ""
