--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -14064,7 +14064,7 @@ msgstr ""
 
 #: system/peripherals.xml
 msgctxt "#36033"
-msgid "Pause playback when switching to another source"
+msgid "Action on switching to another source"
 msgstr ""
 
 #empty string with id 36034
@@ -14115,7 +14115,26 @@ msgctxt "#36042"
 msgid "Use limited colour range (16-235)"
 msgstr ""
 
-#empty strings from id 36043 to 36100
+#: xbmc/peripherals/devices/peripheralcecadapter.cpp
+msgctxt "#36043"
+msgid "No CEC capable TV detected. Disable polling for CEC capable devices?"
+msgstr ""
+
+#. Desc of action to be taken when "changing CEC source" (2nd)
+#: xbmc/peripherals/devices/PeripheralCecAdapter.cpp
+#: system/peripherals.xml
+msgctxt "#36044"
+msgid "Stop Playback"
+msgstr ""
+
+#. Desc of action to be taken when "changing CEC source" (3rd)
+#: xbmc/peripherals/devices/PeripheralCecAdapter.cpp
+#: system/peripherals.xml
+msgctxt "#36045"
+msgid "Pause Playback"
+msgstr ""
+
+#empty strings from id 36046 to 36100
 #strings from 36100 to 36999 are reserved for settings descriptions
 
 #. Description of settings section "Appearance"
